--- a/union/CMakeLists.txt
+++ b/union/CMakeLists.txt
@@ -1,11 +1,9 @@
 cmake_minimum_required(VERSION 3.0)
-project(tester)
+project(union)
 include(${CMAKE_SOURCE_DIR}/flags.cmake)
-set(SOURCES tester.cpp)
+set(SOURCES union.cpp)
 include_directories(${CMAKE_SOURCE_DIR}/dictionary)
 include_directories(${CMAKE_SOURCE_DIR}/huffman)
-include_directories(${CMAKE_SOURCE_DIR}/union)
-add_executable(${PROJECT_NAME} ${SOURCES})
+add_library(${PROJECT_NAME} ${LINKAGE_TYPE} ${SOURCES})
 target_link_libraries(${PROJECT_NAME} dictionary)
 target_link_libraries(${PROJECT_NAME} huffman)
-target_link_libraries(${PROJECT_NAME} union)
